<resources>
    <string name="app_name">Fingerprint Based Voting</string>
    <string name="fingerprint_based_voting">Fingerprint Based Voting</string>
    <string name="login">Login</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="login_to_account">Login to account</string>
    <string name="enter_login_credentials_correctly">Enter login credentials correctly</string>
    <string name="email">E-mail:</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="enter_details_correctly">Enter details correctly</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="welcome_to_voting_app">Welcome to voting app</string>
    <string name="fullname">Fullname</string>
    <string name="aadhar_no">Aadhar No:</string>
    <string name="phone_no">Phone No:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="select_one_of_vote_category">Select one of Vote Category</string>
    <string name="submit">Submit</string>
    <string name="my_account">My Account</string>
    <string name="register_fingerprint">Register Fingerprint</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="title_activity_homepage_1">homepage 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fingerprint Based Voting</string>
    <string name="nav_header_subtitle">some text </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_votingpage">Voting Page</string>
    <string name="menu_registerfingerprint">Register Fingerprint</string>
    <string name="menu_account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="todo">TODO</string>
    <string name="vote_page">vote page</string>
    <string name="title_activity_homepage_voting">homepageVoting</string>
    <string name="candidate1">candidate 1</string>
    <string name="candidate2">Candidate 2</string>
    <string name="candidate3">Candidate 3</string>
    <string name="candidate4">Candidate 4</string>
    <string name="candidate5">Candidate 5</string>
    <string name="submit_vote">Submit Vote</string>
    <string name="title_activity_votingsystem">votingsystem</string>
    <string name="voting_page">Voting page</string>
    <string name="menu_home">menu home</string>
    <string name="camera">Open Camera</string>
    <string name="proceed_to_voting">Proceed to Voting</string>
    <string name="name">Name :</string>
    <string name="proceed_to_register_fingerprint">proceed to Register Fingerprint</string>
    <string name="upload_image">Upload Image</string>
    <string name="logout">Logout</string>
    <string name="verify_fingerprint">Verify Fingerprint</string>
    <string name="log_in"><u>Log-In</u></string>
    <string name="already_registered">Already Registered ?</string>
    <string name="new_user_registration1"><u>New User Registration</u></string>
    <string name="category_3">Category 3</string>
    <string name="select_one_candidate">Select One Candidate</string>
    <string name="title_activity_cropper_image">CropperImage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="replace_Text">This Will Replace Once Verified</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crop_image">Crop Image</string>
    <string name="please_wait">Please Wait</string>
    <string name="fingerprint_verified">Fingerprint Verified</string>
    <string name="confirm_voting">Confirm Voting</string>
    <string name="fingerprint_image">Fingerprint Image:</string>
    <string name="text_with_paragraphs">1. Provide Camera Permission \n2. Use flash for clicking image \n3. Make sure finger is Clean \n4. Crop the background of finger image before uploading</string>
    <string name="caution">Caution while performing Fingerprint Verification</string>
    <string name="proceed">Proceed</string>
</resources>