<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/imgsignup" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="0.4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/enter_details_correctly"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/fullname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/aadhar_no"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/pho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/phone_no"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColorHint="#78909C"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ename"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pswd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:hint="@string/re_enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                android:textSize="20sp" />

            <Button
                android:id="@+id/reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textSize="17sp"
                android:background="@drawable/button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/already_registered"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="17sp"
                android:textColor="#DA00FE"
                android:id="@+id/logintext"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>