<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp"
    android:orientation="vertical"
    android:layout_margin="5sp"
    android:background="@drawable/layout_bg1">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/candvote"
        android:paddingTop="10sp"
        >

        <RadioButton
            android:layout_marginTop="5sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/radiocircle"
            android:textColor="@color/black"
            android:text="@string/candidate1"/>

        <RadioButton
            android:layout_marginTop="5sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:button="@drawable/radiocircle"
            android:text="@string/candidate2"/>

        <RadioButton
            android:layout_marginTop="5sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:button="@drawable/radiocircle"
            android:text="@string/candidate3"/>

        <RadioButton
            android:layout_marginTop="5sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:button="@drawable/radiocircle"
            android:text="@string/candidate4"/>

        <RadioButton
            android:layout_marginTop="5sp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:button="@drawable/radiocircle"
            android:text="@string/candidate5"/>

    </RadioGroup>

    <Button
        android:id="@+id/sbmtvote"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_vote"
        android:layout_below="@id/candvote"
        />

</RelativeLayout>