<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_qimg_567547c3fb3bec0c506ae6069e9471d9_lq"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30sp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:id="@+id/radioGroup"
            android:padding="10sp">

            <RadioButton
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/radiocircle"
                android:textColor="@color/black"
                android:text="@string/candidate1"/>

            <RadioButton
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:button="@drawable/radiocircle"
                android:text="@string/candidate2"/>

            <RadioButton
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:button="@drawable/radiocircle"
                android:text="@string/candidate3"/>

            <RadioButton
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:button="@drawable/radiocircle"
                android:text="@string/candidate4"/>

            <RadioButton
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:button="@drawable/radiocircle"
                android:text="@string/candidate5"/>

        </RadioGroup>

        <Button
            android:id="@+id/sbmtvote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_vote"
            />
    </LinearLayout>

</LinearLayout>