<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructions"
    android:orientation="vertical"
    android:padding="30sp"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caution"
        android:padding="5sp"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        />
    <TextView
        android:layout_marginTop="20sp"
        android:paddingLeft="10sp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_with_paragraphs"
        android:layout_marginBottom="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/proceed"
        android:id="@+id/movetohome"
        android:textSize="20sp"/>
</LinearLayout>