<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">
        <ImageView
            android:id="@+id/display_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_image_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/camera_button"
            android:text="@string/camera"
            android:layout_gravity="center"/>

        <Button
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/uploadimage"
            android:text="@string/upload_image"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>