<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.votingpage.VotingPageFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/viewhomepage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp"
        android:background="@drawable/layout_bg1"
        android:orientation="vertical"
        android:padding="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_one_of_vote_category"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"

            android:weightSum="1">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                android:checked="false"
                android:text="@string/category_1"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="0.13"
                android:button="@drawable/checkbox"
                android:checked="false"
                android:text="@string/category_2"
                android:textSize="25sp" />
        </RadioGroup>

        <Button
            android:id="@+id/sbmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/submit"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>