<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_width="300sp"
        android:layout_height="400sp"
       >
        <ImageView
            android:id="@+id/fingerimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_image_24"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/replacetext"
        android:textAlignment="center"
        android:text="This should get replaced "
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cambutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/camera" />

        <Button
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verifyfinger"
            android:background="@drawable/button"
            android:text="@string/verify_fingerprint"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>